Enable SSL for PostgreSQL connections and update Vercel configuration for improved routing

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,21 @@
   "version": 2,
   "builds": [
     {
-      "src": "app.js",
-      "use": "@vercel/node"
+      "src": "api/index.js",
+      "use": "@vercel/node",
+      "config": {
+        "includeFiles": ["routes/**", "config/**", "models/**"]
+      }
     }
   ],
   "routes": [
     {
+      "src": "/media/(.*)",
+      "dest": "/api/index.js"
+    },
+    {
       "src": "/(.*)",
-      "dest": "app.js"
+      "dest": "/api/index.js"
     }
   ]
 }
