Refactor server structure by creating an entry point in api/index.js, update database configuration for SSL support, and adjust Vercel settings for deployment

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.js",
+      "src": "app.js",
       "use": "@vercel/node",
       "config": {
         "includeFiles": ["routes/**", "config/**", "models/**"]
@@ -16,7 +16,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "/api/index.js"
+      "dest": "app.js"
     }
   ]
 }
