--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "app.js",
+  "main": "api/index.js",
   "scripts": {
+    "start": "node api/index.js",
+    "build": "echo 'Build script' && npm install",
+    "dev": "nodemon api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "migrate": "sequelize-cli db:migrate",
+    "seed": "sequelize-cli db:seed:all"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@vercel/node": "^4.2.6",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -28,5 +29,8 @@
   "devDependencies": {
     "nodemon": "^3.1.9",
     "sequelize-cli": "^6.6.2"
+  },
+  "engines": {
+    "node": ">=18.x"
   }
 }
