--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
   "routes": [
     {
       "src": "/media/(.*)",
-      "dest": "/api/index.js"
+      "dest": "app.js"
     },
     {
       "src": "/(.*)",
